[gd_scene load_steps=18 format=3 uid="uid://c74end7wytsio"]

[ext_resource type="Texture2D" uid="uid://pucgh0qbmij" path="res://assets/Bg.png" id="1_ig7tw"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://cyf21hnk47j1j" path="res://main.gd" id="2_h2yge"]
[ext_resource type="Script" uid="uid://4sy7biseik5c" path="res://player.gd" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://digqtb5npsn1m" path="res://cpu.gd" id="4_7mycd"]
[ext_resource type="Script" uid="uid://rvgib54ojpun" path="res://ball.gd" id="4_lquwl"]
[ext_resource type="AudioStream" uid="uid://c2drw4to6kosp" path="res://assets/audio/beep.mp3" id="7_272bh"]
[ext_resource type="AudioStream" uid="uid://cjtlbww4gpes2" path="res://assets/audio/coin.mp3" id="8_5vw27"]
[ext_resource type="AudioStream" uid="uid://b4875dxdhiayv" path="res://assets/audio/explode.mp3" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://c2342xfrnehvd" path="res://menu.tscn" id="10_4c57u"]
[ext_resource type="PackedScene" uid="uid://brt137ffwnxgp" path="res://game_over.tscn" id="11_efxa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(1152, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(1151, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(74, 647)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(67, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_ig7tw")
centered = false
script = ExtResource("2_h2yge")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_1bvp3")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_onrkg")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_7mycd")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_lquwl")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_i3pqv")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -40.5)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 695)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-38, 324.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1185, 324)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true

[node name="BeepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_272bh")

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5vw27")

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kek77")
volume_db = -2.506

[node name="Menu" parent="." instance=ExtResource("10_4c57u")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("11_efxa6")]
visible = false

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="start_game" from="Menu" to="." method="start_new_game"]
[connection signal="open_menu" from="GameOver" to="." method="show_main_menu"]
